--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -61,6 +61,13 @@ header {
 
 
 /* =================    MEDIA QUERIES (MEDIUM DEVICES)   ============ */
+@media screen and (max-width: 1300px) {
+  .header_socials, .scroll_down {
+    display: none;
+}
+
+}
+
 @media screen and (max-width: 1024px) {
     header {
         height: 100vh;
@@ -70,9 +77,5 @@ header {
 @media screen and (max-width: 600px) {
     header {
         height: 100vh;
-    }
-
-    .header_socials, .scroll_down {
-        display: none;
     }
 }
