--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -29,6 +29,6 @@ nav a:hover {
 }
 
 nav a.active {
-    background: black;
-    color: var(--color-white);
+    background: var(--color-primary);
+    color: var(--color-bg);
 }
